# PersoChattai

./: .env.example  .gitignore  alembic.ini  design-doc.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  a692589972b4_add_display_name_unique_constraint_to_.py
migrations/: 001_init.sql  002_api_usage.sql  003_model_config.sql
openspec/: config.yaml
openspec/specs/: README.md
src/persochattai/: __main__.py  agent_factory.py  agent_run.py  app.py  config.py  db.py  models.py  tools.py
static/: manifest.json
static/css/: app.css
static/js/: app.js  roleplay.js
templates/: base.html
templates/pages/: materials.html  report.html  roleplay.html
templates/partials/: ability_overview.html  assessment_history.html  assessment_item.html  card_item.html  card_list.html  card_picker.html  conversation_history.html  conversation_history_item.html  crawl_result.html  nickname_modal.html  upload_result.html  usage_summary.html  vocabulary_stats.html
tests/: helpers.py  test_agent_run_wrapper.py  test_app_bootstrap.py  test_assessment_history.py  test_byoa_tools.py  test_card_management.py  test_content_ingestion.py  test_content_summarizer.py  test_conversation_api.py  test_conversation_lifecycle.py  test_conversation_realtime.py  test_conversation_user_validation.py  test_crawl_dedup.py  test_crawl_run_tracking.py  test_crawl_trigger.py  test_database_engine.py  test_fastrtc_integration.py  test_foundation.py  test_frontend_router.py  test_gemini_token_pricing.py  test_gemini_usage_tracking.py  test_model_config_repository.py  test_model_management_api.py  test_model_switching_api.py  test_nlp_metrics.py  test_podcast_scraper.py  test_session_wrapper.py  test_transcript_evaluation.py  test_usage_persistence.py  test_user_identity.py  test_user_repository.py
tests/features/: agent_run_wrapper.feature  app_bootstrap.feature  assessment_history.feature  byoa_tools.feature  card_management.feature  content_ingestion.feature  content_summarizer.feature  conversation_api.feature  conversation_lifecycle.feature  crawl_dedup.feature  crawl_run_tracking.feature  crawl_trigger.feature  fastrtc_integration.feature  foundation.feature  gemini_realtime.feature  gemini_token_pricing.feature  gemini_usage_tracking.feature  model_config_repository.feature  model_management_api.feature  (+6 more)
(+142 files in other folders)
